.k8s/apps/glance.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6375665526afd3db79a7f8d9e81c318c38c5a67c
    kubenix/module-instance: glance
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  replicas: 0
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        glance.josevictor.me/config-hash: 58d244ee2653120fb0105c54b3fedc160f8441c5c07e660d0b7181e08b144634
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: glance
        app.kubernetes.io/name: glance
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - lab-pi-bk
      automountServiceAccountToken: true
      containers:
        - image: glanceapp/glance:v0.8.5@sha256:32ab73d80f2b8b5fb0735b0431deb36b93fbb6b2fb43592449b0178c8b83e350
          imagePullPolicy: IfNotPresent
          name: main
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
          volumeMounts:
            - mountPath: /app/config/glance.yml
              name: config
              readOnly: true
              subPath: glance.yml
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      tolerations:
        - effect: NoSchedule
          key: pi-only
          operator: Equal
          value: "true"
      volumes:
        - configMap:
            items:
              - key: glance.yml
                path: glance.yml
            name: glance
          name: config
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
    lbipam.cilium.io/ips: 10.10.10.127
    lbipam.cilium.io/sharing-key: glance
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    app.kubernetes.io/service: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6375665526afd3db79a7f8d9e81c318c38c5a67c
    kubenix/module-instance: glance
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubenix/k8s-version: "1.32"
    kubenix/project-name: ze-homelab
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: glance
    helm.sh/chart: app-template-4.2.0
    kubenix/hash: 6375665526afd3db79a7f8d9e81c318c38c5a67c
    kubenix/module-instance: glance
    kubenix/module-name: release
    kubenix/module-version: 1.0.0
  name: glance
  namespace: apps
spec:
  ingressClassName: cilium
  rules:
    - host: glance.josevictor.me
      http:
        paths:
          - backend:
              service:
                name: glance
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - glance.josevictor.me
      secretName: wildcard-tls
